create cleaningNum func and cleaningAdress func

--- a/blockchain-transactions.ipynb
+++ b/blockchain-transactions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "f1034cf4-6f20-4c1a-bd83-ffbc33a24bc1",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "7c78cbfa-153b-446e-8525-49939f528d49",
    "metadata": {},
    "outputs": [],
@@ -44,23 +44,15 @@
     "        self.url = \"https://api.whale-alert.io/feed.csv\"\n",
     "        self.df = pd.read_csv(self.url)\n",
     "        self.df.columns =[\"id\", \"timestamp\", \"symbol\", \"amount\", \"amountUSD\", \"txType\", \"from\", \"fromType\", \"to\", \"toType\"]\n",
-    "        # print(\" \".join(map(str, list(df.iloc[i]))))  \n",
     "    \n",
     "    \n",
-    "    def humanizeNumber(self, nStr):\n",
-    "        nStr = str(nStr);\n",
-    "        x = nStr.split('.');\n",
-    "        x1 = x[0];\n",
-    "        x2 = '.' + x[1] if len(x) > 1 else '';\n",
-    "        # rgx = '/(\\d+)(\\d{3})/';\n",
-    "        # while (rgx.test(x1)):\n",
-    "        #     x1 = x1.replace(rgx, '$1' + ',' + '$2');\n",
-    "            \n",
-    "        return x1 + x2;\n",
+    "    def cleaningNum(self, number):\n",
+    "        pretty_number  = f\"{number:,}\"\n",
+    "        return pretty_number;\n",
     "    \n",
     "    \n",
-    "    def addressHTML(self, address, addressType):\n",
-    "        # [\"unknown\", \"exchange\", \"ico\", \"token\", \"other\"]\n",
+    "    def cleaningAdress(self, address, addressType):\n",
+    "        # addresses types [\"unknown\", \"exchange\", \"ico\", \"token\", \"other\"]\n",
     "        if addressType.lower() == \"unknown\":\n",
     "            wallet = \"unknown wallet\"\n",
     "            return wallet\n",
@@ -77,26 +69,26 @@
     "        main_text = \"Nothing happened !\"\n",
     "        #create loop for going inside of row \n",
     "        for i in range(0, len(self.df[\"id\"])): \n",
-    "            main_text = \" \" + str(datetime.fromtimestamp(self.df.loc[i, \"timestamp\"])) + \" \" + self.humanizeNumber(self.df.loc[i, \"amount\"]) + self.df.loc[i, \"symbol\"].upper() + \" (\" + self.humanizeNumber(self.df.loc[i, \"amountUSD\"]) + \" USD)\";\n",
+    "            main_text = \" \" + str(datetime.fromtimestamp(self.df.loc[i, \"timestamp\"])) + \" \" + self.cleaningNum(self.df.loc[i, \"amount\"]) + self.df.loc[i, \"symbol\"].upper() + \" (\" + self.cleaningNum(self.df.loc[i, \"amountUSD\"]) + \" USD)\";\n",
     "            # main if statements\n",
     "            if self.df.loc[i, \"txType\"].lower() == 'transfer':\n",
-    "                main_text += \" transferred\" + \" \" + \"from \" + self.addressHTML(self.df.loc[i, \"from\"], self.df.loc[i, \"fromType\"]) + \" \" + \"to \" + self.addressHTML(self.df.loc[i, \"to\"], self.df.loc[i, \"toType\"]);\n",
+    "                main_text += \" transferred\" + \" \" + \"from \" + self.cleaningAdress(self.df.loc[i, \"from\"], self.df.loc[i, \"fromType\"]) + \" \" + \"to \" + self.cleaningAdress(self.df.loc[i, \"to\"], self.df.loc[i, \"toType\"]);\n",
     "                # print out main_text\n",
     "                print(main_text)\n",
     "            elif self.df.loc[i, \"txType\"].lower() == 'mint':\n",
-    "                main_text += \" minted\" + \" \" + \"at \" + self.addressHTML(self.df.loc[i, \"to\"], self.df.loc[i, \"toType\"]);\n",
+    "                main_text += \" minted\" + \" \" + \"at \" + self.cleaningAdress(self.df.loc[i, \"to\"], self.df.loc[i, \"toType\"]);\n",
     "                # print out main_text\n",
     "                print(main_text)\n",
     "            elif self.df.loc[i, \"txType\"].lower() == 'burn':\n",
-    "                main_text += \" burned\" + \" \" + \"at \" + self.addressHTML(self.df.loc[i, \"from\"], self.df.loc[i, \"fromType\"]);\n",
+    "                main_text += \" burned\" + \" \" + \"at \" + self.cleaningAdress(self.df.loc[i, \"from\"], self.df.loc[i, \"fromType\"]);\n",
     "                # print out main_text\n",
     "                print(main_text)\n",
     "            elif self.df.loc[i, \"txType\"].lower() == 'lock':\n",
-    "                main_text += \" locked\" + \" \" + \"at \" + self.addressHTML(self.df.loc[i, \"from\"], self.df.loc[i, \"fromType\"]);\n",
+    "                main_text += \" locked\" + \" \" + \"at \" + self.cleaningAdress(self.df.loc[i, \"from\"], self.df.loc[i, \"fromType\"]);\n",
     "                # print out main_text\n",
     "                print(main_text)\n",
     "            elif self.df.loc[i, \"txType\"].lower() =='unlock':\n",
-    "                main_text += \" unlocked\" + \" \" + \"at \" + self.addressHTML(self.df.loc[i, \"to\"], self.df.loc[i, \"toType\"]);\n",
+    "                main_text += \" unlocked\" + \" \" + \"at \" + self.cleaningAdress(self.df.loc[i, \"to\"], self.df.loc[i, \"toType\"]);\n",
     "                # print out main_text\n",
     "                print(main_text)\n",
     "        if main_text == \"Nothing happened !\":\n",
@@ -106,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "047124d5-a99d-4276-8273-cc1c68a480f3",
    "metadata": {},
    "outputs": [],
@@ -116,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "dbfc5092-8020-4476-bfc3-55d19a091e08",
    "metadata": {},
    "outputs": [
@@ -124,37 +116,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2023-02-01 13:04:57 40000.0USDT (40236 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:57 72780.0USDT (73210 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:57 245000.0USDT (246447 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:54 120000.0USDT (120709 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:54 118724.0USDT (119425 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:48 125000.0USDT (125738 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:48 120344.0USDT (121055 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:45 50000.0USDT (49883 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:42 20000.0USDT (19953 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:42 21010.0USDT (20961 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:35 856399.0USDC (862749 USD) transferred from kraken to unknown wallet\n",
-      " 2023-02-01 13:04:35 50000.0USDT (50295 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:35 54267.0USDT (54587 USD) transferred from coinbase to binance\n",
-      " 2023-02-01 13:04:33 29500.0USDT (29431 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:33 13255.0USDT (13224 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:27 28788.0USDT (28720 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:27 273389.0USDT (272747 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:23 200000.0USDT (199531 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:21 80000.0USDT (79812 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:18 156241.0USDT (155874 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:18 95537.0USDT (95313 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:15 100000.0USDT (99765 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:12 2274800.0USDT (2269462 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:12 200000.0USDT (199531 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:11 84.6ETH (133934 USD) transferred from mexc to unknown wallet\n",
-      " 2023-02-01 13:04:11 1000000.0USDT (997654 USD) transferred from okex to okex\n",
-      " 2023-02-01 13:04:09 3000000.0USDT (2992961 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:06 170207.0USDT (169808 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:06 138680.0USDT (138355 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:00 51351.0USDT (51231 USD) transferred from unknown wallet to unknown wallet\n",
-      " 2023-02-01 13:04:00 50000.0USDT (49883 USD) transferred from unknown wallet to unknown wallet\n"
+      " 2023-02-01 23:33:30 150,000USDT (150,819 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:30 16,097USDT (16,185 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:27 50,000USDT (50,273 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:27 157,650TRX (9,938 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:24 20,720XLM (1,916 USD) transferred from coinbase withdrawals to binance\n",
+      " 2023-02-01 23:33:24 300,000USDT (301,638 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:18 100,038USDT (100,584 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:15 12,244USDT (12,310 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:12 10,954USDT (11,014 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:11 40BNB (12,673 USD) transferred from unknown wallet to binance\n",
+      " 2023-02-01 23:33:06 218,288TRX (13,709 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:06 12,832USDT (12,815 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:01 790,727XRP (328,993 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:33:00 202,800USDT (202,538 USD) transferred from binance to unknown wallet\n",
+      " 2023-02-01 23:32:57 25,452USDT (25,419 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:51 108,258USDT (108,118 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:50 148,189XRP (61,656 USD) transferred from binance to unknown wallet\n",
+      " 2023-02-01 23:32:48 400,000USDT (399,482 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:45 289,233USDT (288,859 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:42 19,859USDT (19,833 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:42 99,999XRP (41,606 USD) transferred from unknown wallet to binance\n",
+      " 2023-02-01 23:32:39 13,163USDT (13,146 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:33 10,575USDT (10,561 USD) transferred from unknown wallet to kraken\n",
+      " 2023-02-01 23:32:33 360,000USDT (359,534 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:33 169,629USDT (169,409 USD) transferred from unknown wallet to kraken\n",
+      " 2023-02-01 23:32:27 11,784USDT (11,769 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:24 40,800USDT (40,747 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:18 28,000USDT (27,964 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:18 130,000USDT (129,832 USD) transferred from binance to unknown wallet\n",
+      " 2023-02-01 23:32:12 17,106USDT (17,084 USD) transferred from unknown wallet to unknown wallet\n",
+      " 2023-02-01 23:32:12 24,924XRP (10,370 USD) transferred from unknown wallet to unknown wallet\n"
      ]
     }
    ],
