add description into main function

--- a/blockchain-transactions.ipynb
+++ b/blockchain-transactions.ipynb
@@ -99,6 +99,8 @@
     "            \n",
     "            \n",
     "def main (realTime=False):\n",
+    "    print(\"press Ctrl+C in terminal for interruption\")\n",
+    "    print(\"stop kernel in jupyter for interruption\")\n",
     "    while realTime:\n",
     "        my_block = BitBlock()\n",
     "        my_block.showLive()\n",
